2014-12-23 Fred Gleason <fredg@paravelsystems.com> 	* Added support for 'DAVIT_REPORT_FORMAT', 'DAVIT_REPORT_FONT_FACE', 	'DAVIT_REPORT_FONT_SIZE' and 'DAVIT_REPORT_FONT_WEIGHT' environmental 	variables.

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -21,7 +21,8 @@
 ##
 ## Use automake to process this into a Makefile.in
 
-EXTRA_DIST = tables.txt
+EXTRA_DIST = env_vars.txt\
+             tables.txt
 
 CLEANFILES = *~
 MAINTAINERCLEANFILES = *~ Makefile.in configure aclocal.m4
