2015-01-12 Fred Gleason <fredg@paravelsystems.com> 	* Fixed a bug in 'davit/Makefile.am' that broke the 'make rpm' 	target. 	* Fixed a bug in 'davit/davit.spec.in' that broke the 'make rpm' 	target.

--- a/davit.spec.in
+++ b/davit.spec.in
@@ -100,7 +100,7 @@ rm -rf $RPM_BUILD_ROOT
 %doc README
 %doc INSTALL
 %doc ChangeLog
-%doc docs/env_vars.txt
+%doc docs/env_var.txt
 %doc scripts/add_mysql_user.sh
 
 %files web
