2015-11-02 Fred Gleason <fredg@paravelsystems.com> 	* Cleaned up warnings in 'configure.ac' and 'Makefile.am'. 	* Added a 'qt3-MySQL' dependency in 'davit.spec.in'.

--- a/configure.ac
+++ b/configure.ac
@@ -102,7 +102,7 @@ else
   AC_SUBST(DAVIT_LIB_PATH,lib)
 fi
 
-AC_OUTPUT(./Makefile \
+AC_OUTPUT(Makefile \
   helpers/Makefile \
   scripts/Makefile \
   lib/Makefile \
