--- a/utils/dvtstamp/Makefile.am
+++ b/utils/dvtstamp/Makefile.am
@@ -1,10 +1,8 @@
-## automake.am
+## Makefile.am
 ##
-## Automake.am for rivendell/utils/dvtstamp
+## Makefile.am for rivendell/utils/dvtstamp
 ##
-##   (C) Copyright 2002-2011 Fred Gleason <fredg@paravelsystems.com>
-##
-##      $Id: Makefile.am,v 1.2 2011/04/01 17:32:17 pcvs Exp $
+##   (C) Copyright 2002-2025 Fred Gleason <fredg@paravelsystems.com>
 ##
 ##   This program is free software; you can redistribute it and/or modify
 ##   it under the terms of the GNU General Public License version 2 as
@@ -32,5 +30,17 @@ dvtstamp_LDADD = @QT_LIBS@ @VMIME_LIBS@ -ldvt
 
 EXTRA_DIST = dvtstamp.pro
 
-CLEANFILES = *~ moc_* *.qm *.obj *.idb *.pdb *ilk
-MAINTAINERCLEANFILES = *~ Makefile.in configure aclocal.m4 *.tar.gz moc_*
+CLEANFILES = *~\
+             *.idb\
+             *.ilk\
+             *.obj\
+             *.pdb\
+             *.qm\
+             moc_*
+
+MAINTAINERCLEANFILES = *~\
+                       *.tar.gz\
+                       aclocal.m4\
+                       configure\
+                       Makefile.in\
+                       moc_*
