2025-05-24 Fred Gleason <fredg@paravelsystems.com> 	* Completed rough port to Qt6.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -75,6 +75,7 @@ DISTCLEANFILES = *~\
 MAINTAINERCLEANFILES = *~\
                        *.tar.gz\
                        aclocal.m4\
+                       compile\
                        config.guess\
                        config.sub\
                        configure\
