2025-05-26 Fred Gleason <fredg@paravelsystems.com> 	* Modifed davit(1) to create home directory configuration 	automatically at startup. 	* Added a 'DvtSqlQuery' class in 'lib/'.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -41,6 +41,7 @@ dist_libdvt_la_SOURCES = algocombobox.cpp algocombobox.h\
                          dvtlabel.cpp dvtlabel.h\
                          dvtlistselector.cpp dvtlistselector.h\
                          dvtlistviewitem.cpp dvtlistviewitem.h\
+                         dvtsqlquery.cpp dvtsqlquery.h\
                          dvtprofile.cpp dvtprofile.h\
                          dvtprofileline.cpp dvtprofileline.h\
                          dvtprofilesection.cpp dvtprofilesection.h\
