2025-06-03 Fred Gleason <fredg@paravelsystems.com> 	* Refactored the 'Program List for <affiliate>' dialog in davit(1). 	* Refactored the 'Affiliate History' dialog in davit(1).
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/davit/Makefile.am
+++ b/davit/Makefile.am
@@ -39,6 +39,7 @@ dist_davit_SOURCES = activity_report.cpp\
                      affiliatesbymarket_report.cpp\
                      affiliatesbyprogram_report.cpp\
                      affiliatelistmodel.cpp affiliatelistmodel.h\
+                     airinglistmodel.cpp airinglistmodel.h\
                      arbitron_report.cpp\
                      contact.cpp contact.h\
                      contactlistmodel.cpp contactlistmodel.h\
@@ -91,6 +92,7 @@ nodist_davit_SOURCES = moc_add_affiliate.cpp\
                        moc_add_user.cpp\
                        moc_affidavit_picker.cpp\
                        moc_affiliatelistmodel.cpp\
+                       moc_airinglistmodel.cpp\
                        moc_contactlistmodel.cpp\
                        moc_contactlistview.cpp\
                        moc_davit.cpp\
