2025-07-15 Fred Gleason <fredg@paravelsystems.com> 	* Disabled installation of components in 'utils/vnc/'. 	* Disabled installation of components in 'scripts/'. 	* Moved sample configuration files to 'conf/'. 	* Got the affiliate web interface working.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,6 +21,7 @@
 SUBDIRS = helpers\
           lib\
           scripts\
+          conf\
           docs\
           icons\
           davit\
@@ -43,12 +44,10 @@ rpm:	dist
 EXTRA_DIST = autogen.sh\
              build_win32.bat\
              davit-sample.ini\
-             davit.conf-sample\
              davit.ini kdmrc-example\
              davit.ism\
              davit.pro\
              davit.spec.in\
-             dvt-bin.conf.in\
              get_target.sh\
              get_target.pl\
              get_distro.sh\
