2025-07-18 Fred Gleason <fredg@paravelsystems.com> 	* Refactored the 'Edit System' and 'Compose Mail' dialogs in davit(1).
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -45,6 +45,7 @@ dist_libdvt_la_SOURCES = algocombobox.cpp algocombobox.h\
                          dvtprofile.cpp dvtprofile.h\
                          dvtprofileline.cpp dvtprofileline.h\
                          dvtprofilesection.cpp dvtprofilesection.h\
+                         dvtsendmail.cpp dvtsendmail.h\
                          dvtsystem.cpp dvtsystem.h\
                          dvttableview.cpp dvttableview.h\
                          dvttablewidgetitem.cpp dvttablewidgetitem.h\
