2025-07-29 Fred Gleason <fredg@paravelsystems.com> 	* Hid the 'Generate Affidavit' button in the 'List Programs' dialog.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/davit/Makefile.am
+++ b/davit/Makefile.am
@@ -36,6 +36,8 @@ dist_davit_SOURCES = activity_report.cpp\
                      addedprograms_report.cpp\
                      affidavit_picker.cpp affidavit_picker.h\
                      affidavit_report.cpp\
+                     affidavitaffiliatereport.cpp\
+                     affidavitprogramreport.cpp\
                      affiliatesbymarket_report.cpp\
                      affiliatesbyprogram_report.cpp\
                      affiliatelistmodel.cpp affiliatelistmodel.h\
