2025-08-10 Fred Gleason <fredg@paravelsystems.com> 	* Stubbed out dvtdbmgr(8). 	* Modified the parameters names in the '[mySQL]' section of 	davit.conf(5) to be consistent with those used in rd.conf(5).
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/configure.ac
+++ b/configure.ac
@@ -112,6 +112,7 @@ AC_CONFIG_FILES(Makefile \
   web/davit/Makefile \
   utils/Makefile \
   utils/dvtdbcheck/Makefile \
+  utils/dvtdbmgr/Makefile \
   utils/dvtstamp/Makefile \
   utils/vnc/Makefile \
   utils/vnc/davit.xinitrc \
