2025-08-13 Fred Gleason <fredg@paravelsystems.com> 	* Added a 'Duplicate Affiliates' report in davit(1). 	* Added a database management utility in dvtdbmgr(8). 	* Added a davit.conf(5) man page.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/davit/Makefile.am
+++ b/davit/Makefile.am
@@ -51,6 +51,7 @@ dist_davit_SOURCES = activity_report.cpp\
                      davit.cpp davit.h\
                      daypicker.cpp daypicker.h\
                      dialog.cpp dialog.h\
+                     duplicateaffiliate_report.cpp\
                      edit_affiliate.cpp edit_affiliate.h\
                      edit_airing.cpp edit_airing.h\
                      edit_contact.cpp edit_contact.h\
