2025-08-13 Fred Gleason <fredg@paravelsystems.com> 	* Debianized the project.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,18 +3,26 @@
 *.5
 *.8
 *.a
+*.buildinfo
 *.cgi
+*.changes
+*.deb
+*.ddeb
+*.dsc
 *.html
 *.la
 *.lo
 *.o
 *.pdf
 *.spec
+*.tar.gz
+*.tar.xz
 .deps
 .libs
 aclocal.m4
 autom4te.cache
 compile
+build_debs.sh
 config.guess
 config.log
 config.status
@@ -32,6 +40,8 @@ Makefile.in
 moc_*
 missing
 davit/davit
+debian/changelog
+debian/control
 utils/dvtdbcheck/dvtdbcheck
 utils/dvtstamp/dvtstamp
 utils/vnc/davit.xinitrc
