2025-08-14 Fred Gleason <fredg@paravelsystems.com> 	* Removed 'utils/vnc/'.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -21,8 +21,7 @@
 ## Use automake to process this into a Makefile.in
 
 SUBDIRS = dvtdbmgr\
-          dvtstamp\
-          vnc
+          dvtstamp
 
 AM_CPPFLAGS = -Wall -DPREFIX=\"$(prefix)\" -DQTDIR=\"@QT_DIR@\" @QT_CXXFLAGS@ -I$(top_srcdir)/lib
 LIBS = @QT_LIBS@ -L$(top_srcdir)/lib
